Bug 691002 - Error: /limitcheck in --run--
Summary: Error: /limitcheck in --run--
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Interpreter (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Alex Cherepanov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-15 06:49 UTC by Jason Giglio
Modified: 2009-12-16 06:48 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
01726CLC317.pdf (273.12 KB, application/pdf)
2009-12-15 06:50 UTC, Jason Giglio
Details
patch (745 bytes, patch)
2009-12-15 11:12 UTC, Alex Cherepanov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jason Giglio 2009-12-15 06:49:45 UTC
gsc -dNOPAUSE -dBATCH -sOutputFile=/dev/shm/temp -sDEVICE=tiffsep -r20 -f
/storage/archive/01726CLC317.pdf
GPL Ghostscript SVN PRE-RELEASE 8.71 (2009-08-01)
Copyright (C) 2009 Artifex Software, Inc.  All rights reserved.
This software comes with NO WARRANTY: see the file PUBLIC for details.
Processing pages 1 through 1.
Page 1
Error: /limitcheck in --run--
Operand stack:
   --dict:10/19(L)--   0.3   0.3   0.3   0   0   0.3   0.3   0   0   --nostringval--
Execution stack:
   %interp_exit   .runexec2   --nostringval--   --nostringval--  
--nostringval--   2   %stopped_push   --nostringval--   --nostringval--  
--nostringval--   false   1   %stopped_push   1878   1   3   %oparray_pop   1877
  1   3   %oparray_pop   1861   1   3   %oparray_pop   --nostringval--  
--nostringval--   2   1   1   --nostringval--   %for_pos_int_continue  
--nostringval--   --nostringval--   --nostringval--   --nostringval--  
%array_continue   --nostringval--   false   1   %stopped_push   --nostringval--
  %loop_continue   --nostringval--   --nostringval--   --nostringval--
Dictionary stack:
   --dict:1153/1684(ro)(G)--   --dict:1/20(G)--   --dict:75/200(L)--  
--dict:75/200(L)--   --dict:108/127(ro)(G)--   --dict:287/300(ro)(G)--  
--dict:22/25(L)--   --dict:6/8(L)--   --dict:21/40(L)--   --dict:1/1(ro)(G)--  
--dict:4/5(L)--
Current allocation mode is local
Last OS error: 2
GPL Ghostscript SVN PRE-RELEASE 8.71: Unrecoverable error, exit code 1
Comment 1 Jason Giglio 2009-12-15 06:50:28 UTC
Created attachment 5775 [details]
01726CLC317.pdf
Comment 2 Alex Cherepanov 2009-12-15 11:12:34 UTC
Created attachment 5777 [details]
patch

Increase the limit on the number of color components to 12.
9 components are required by the sample file, 3 make a small
reserve.

Regression testing shows no differences.
Comment 3 Jason Giglio 2009-12-15 12:59:08 UTC
Does the testing test on psd photoshop output driver?  IIRC that is the only
other format that supports arbitrary colorants and it has a limit of 8, so if
this would break anything that is where I'd expect it to happen.
Comment 4 Alex Cherepanov 2009-12-15 14:25:18 UTC
The patch has been committed as a rev. 10504.
psdcmyk run finishes without errors. All other devices can convert
DeviceN color to standard colors using tint transform functions.

Regression testing shows no differences.
Comment 5 Ray Johnston 2009-12-15 14:33:05 UTC
There is a slight performance penalty with 12 vs. 8 since this increases the
size of a gx_device_color and the current code creates and array of 256 image
clues (gx_image_clue) that includes a device color. This is why we dropped down
from 252 (the Adobe CPSI supported count).

Note that the image clues have been ripped out of the icc_work branch, so the
performance won't occur there.

Michael, any comment on this change ?
Comment 6 Jason Giglio 2009-12-16 06:13:12 UTC
In terms of prepress, most of our files have less than 8 colorants.  I think the
largest I have seen is 14 or 15.
Comment 7 Ray Johnston 2009-12-16 06:48:40 UTC
Actually, Gigs (Jason) you had sent Dan Coby a file that had 17 colorants when
he was developing the "compressed color encoding" that tiffsep, tiffsep1 and
psdcmyk use. I am not sure about how many colorants are permitted in the
psd format, but tiffsep and tiffsep1 can handle more than 16. Dan tested with
a file that had 250 "patches" on it (back when we had 252 for the MAX components).