Increase the limit on the number of color components to 12. A file with 9 components has been found in the wild, add 3 more for a small reserve. Bug 691002.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10504 a1074d23-0009-0410-80fe-cf8c14f379e6